# llama_vllm

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/distillation/: feature_distill.yaml  logit_distill.yaml
configs/finetuning/: dpo.yaml  lora.yaml  qlora.yaml
configs/inference/: batch.yaml  server.yaml
data/: alpaca_zh_demo.jsonl  dpo_pairs_demo.jsonl  sharegpt_demo.jsonl
docker/: Dockerfile  docker-compose.yml
docs/: dashboard.md
examples/distillation/: run_logit_distill.py
examples/finetuning/: run_lora.py
examples/inference/: batch_inference.py  prompts.jsonl
scripts/: run_lora.ps1
src/llama_vllm/: __init__.py
src/llama_vllm/cli/: __init__.py  common.py  distill.py  finetune.py  infer.py  main.py
src/llama_vllm/config/: __init__.py  preflight.py  schemas.py
src/llama_vllm/dashboard/: __init__.py  app.py  history.py  service.py
src/llama_vllm/data/: __init__.py  collator.py  dataset.py
src/llama_vllm/distillation/: __init__.py  feature_distill.py  logit_distill.py  teacher.py  trainer.py
src/llama_vllm/finetuning/: __init__.py  metadata.py  runtime.py  trainer.py
src/llama_vllm/inference/: __init__.py  batch.py  engine.py  server.py  streaming.py
src/llama_vllm/models/: __init__.py  loader.py  registry.py
src/llama_vllm/utils/: __init__.py  checkpoint.py  hardware.py  logging.py  metrics.py
tests/unit/: test_checkpoint_manifests.py  test_cli_auto_fix.py  test_cli_common.py  test_config_loading.py  test_config_overrides.py  test_dashboard_api.py  test_dashboard_history.py  test_dashboard_service.py  test_finetuning_metadata.py  test_finetuning_runtime.py  test_hardware_probe.py  test_loss_modules.py  test_training_config_validation.py  test_training_preflight.py
